# AI_agents_dxb

./: .gitignore  MASTER_BRIEF.md  PILOT-METRICS.md  Procfile  README.md
dashboard/: .gitignore  README.md  package-lock.json  package.json
deploy/: static_server.py
journal/: 2026-07-14-strategy-analysis-and-agent-fixes.md  2026-07-15-approval-dashboard.md  2026-07-15-website-build-and-review.md  2026-07-16-research-dubai-ai.md  2026-07-17-community-signals-and-buildout.md  2026-07-17-journal-and-attesta-site.md  2026-07-18-agent-service-and-review-fixes.md  2026-07-21-launch-deployment.md  2026-07-22-broker-feedback-video.md  LESSONS.md  README.md
outreach/: whatsapp-feedback-message.md
product-attesta/: .gitignore  LICENSE  README.md  leadcode_audit_report.md  pilot_audit_report.md  pyproject.toml
product-attesta/agent_template/: __init__.py  agent.py  approvals.py  config.py  conversation.py  drafter.py  qualify.py
product-attesta/attesta/: __init__.py  cli.py  gateway.py  ledger.py  policy.py  recorder.py  redact.py  replay.py  report.py  verifier.py
product-attesta/examples/: chat_test.py  conversation_pilot.py  dashboard_pilot.py  demo_agent.py  leadcode_guard_demo.html  leadcode_guard_demo.py  live_chat.py  realestate_pilot.py
product-attesta/service/: server.py  state.py
product-attesta/tests/: test_agent_template.py  test_approvals.py  test_conversation.py  test_core.py  test_gateway.py  test_llm.py  test_service.py
research/: Attesta_Flight_Recorder_DeepDive.docx  Competitive_Landscape_How_Crowded.md  Dubai_Gateway_Venture_Research.docx  (+3 more)
(+40 files in other folders)
